<resources>
    <string name="app_name">Ideal Internships</string>
    <string name="enterTextStr">Please enter the following information in order to finish setting up your account</string>
    <string name="enterFirstNameStr">First Name</string>
    <string name="enterFirstNameHintStr">Enter your first name</string>
    <string name="enterLastNameStr">Last Name</string>
    <string name="enterLastNameHintStr">Enter your last name</string>
    <string name="uploadAnInternshipStr">Upload an Internship</string>
    <string name="enterInternshipNameStr">Enter the name of the internship</string>
    <string name="enterInternshipCostStr">Enter internship cost</string>
    <string name="enterBio">Bio</string>
    <string name="nameStr">Name</string>
    <string name="datesStr">Dates</string>
    <string name="orGradeStr">or Grade (If applicable) </string>
    <string name="minGradeStr"> Minimum Grade (If applicable) </string>
    <string name="maxGradeStr">Maximum Grade(If applicable) </string>
    <string name="locationStr">Location</string>
    <string name="genderStr">Gender</string>
    <string name="companyStr">Company</string>
    <string name="studentStr">Student</string>

    ///////////////////////////////////////////// Race Strings /////////////////////////////////////
    <string name="raceStr">Race</string>
    <string name="whiteCaucasianStr">White/Caucasian</string>
    <string name="blackAfricanAmericanStr">Black/African American</string>
    <string name="nativeAmericanOrAlaskaNativeStr">Native American or Alaska Native</string>
    <string name="asianPacificIslanderStr">Asian/Pacific Islander</string>
    <string name="latinoaStr">Latino/a</string>
    <string name="multiracialStr">Multiracial</string>
    <string name="allStr">All</string>
    ////////////////////////////////////////////////////////////////////////////////////////////////

    <string name="incomeStr">Target Income</string>
    <string name="militaryStr">Military</string>
    <string name="paidStr">Paid</string>
    <string name="costStr">Cost</string>
    <string name="picturesStr">Pictures</string>
    <string name="deadlineStr">Deadline</string>
    <string name="descriptionStr">Description</string>
    <string name="enterDescriptionStr">Enter a description</string>
    <string name="prerequisitesStr">Prerequisites</string>
    <string name="enterPrerequisitesStr">Enter prerequisites</string>

    /////////////////////////////////////////// Field Strings //////////////////////////////////////
    <string name="fieldStr">Field</string>
    <string name="biologyStr">Biology</string>
    <string name="chemistryStr">Chemistry</string>
    <string name="engineeringStr">Engineering</string>
    <string name="physicsStr">Physics</string>
    <string name="computerScienceStr">Computer Science</string>
    <string name="musicStr">Music</string>
    <string name="artStr">Art</string>
    <string name="theatreStr">Theatre</string>
    <string name="environmentalScienceStr">Environmental Science</string>
    <string name="neuroscienceStr">Neuroscience</string>
    <string name="medicineStr">Medicine</string>
    <string name="writingStr">Writing</string>
    <string name="businessStr">Business</string>
    <string name="governmentPoliticsStr">Government/Politics</string>
    <string name="marketingStr">Marketing</string>
    <string name="mathStr">Math</string>
    <string name="communicationsStr">Communications</string>
    <string name="researchStr">Research</string>
    <string name="scienceStr">Science</string>
    <string name="historyStr">History</string>
    <string name="otherFieldStr">Other Field Explained in the Description</string>
    ////////////////////////////////////////////////////////////////////////////////////////////////

    <string name="otherStr">Other</string>
    <string name="uploadAPhotoStr">Upload a Photo</string>
    <string name="linkToApplicationStr">Link to internship</string>
    <string name="enterAnApplicationLinkStr">Enter an application link</string>
    <string name="postStr">Post</string>
    <string name="companyNameStr">Company Name</string>
    <string name="enterCompanyNameStr">Enter company name</string>
    <string name="companyBioStr">Company Description</string>
    <string name="enterCompanyBioStr">Enter company description</string>
    <string name="companyLocationStr">Company Location</string>
    <string name="enterCompanyLocationStr">Enter company location</string>
    <string name="companyWebsiteStr">Company Website</string>
    <string name="enterCompanyWebsiteStr">Enter company website</string>
    <string name="selectCompanyPFPText">Company Picture</string>
    <string name="save">SAVE</string>
    <string name="ageStr">Age</string>
    <string name="minAgeStr">Minimum Age (If applicable)</string>
    <string name="maxAgeStr">Maximum Age (If applicable)</string>
    <string name="enterStudentInfoStr">Student Info Form</string>
    <string name="uploadStr">Upload</string>
    <string name="manageStr">Manage</string>
    <string name="myAccStr">My Account</string>
    <string name="enterCompanyInfoStr">Enter Company Info</string>
    <string name="goToMyAccCompany">Go to the Company Interface!</string>
    <string name="selectImg">Select Image</string>


    <string name="schoolStr">School</string>
    <string name="enterSchoolHintStr">Enter your school</string>
    <string name="militaryAssociationStr">Military Association</string>
    <string name="enterLocationStr">Enter your location</string>
    <string name="preferredDatesStr">Preferred Dates</string>
    <string name="pushNotificationsStr">Push Notifications</string>
    <string name="startStr">Start</string>
    <string name="endStr">End</string>

    <string name="title_activity_company_account">CompanyAccount</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_company_posted_internships">CompanyPostedInternshipsActivity
    </string>
    <string name="currentPostingsStr">Current Postings</string>
    <string name="editStr">EDIT</string>
    <string name="seeMoreStr">See More</string>
    <string name="gradeStr">Grade</string>

    //////////////////////////////////////////// String Arrays /////////////////////////////////////
    <string-array name="ages">
        <item>--</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>Younger than 13</item>
        <item>Older than 19</item>
        <item>N/A</item>
    </string-array>
    <string-array name="gender">
        <item>--</item>
        <item>Female</item>
        <item>Male</item>
        <item>Nonbinary</item>
        <item>All</item>
        <item>Other</item>
    </string-array>

    <string-array name="grade">
        <item>--</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>N/A</item>
    </string-array>

    <string-array name="races">
        <item>--</item>
        <item>White/Caucasian</item>
        <item>Black/African American</item>
        <item>Native American or Alaska Native</item>
        <item>Asian/Pacific Islander</item>
        <item>Hispanic</item>
        <item>Multiracial</item>
        <item>Other</item>
    </string-array>


    <string-array name="fields">
        <item>--</item>
        <item>Biology</item>
        <item>Chemistry</item>
        <item>Engineering</item>
        <item>Physics</item>
        <item>Computer Science</item>
        <item>Music</item>
        <item>Art</item>
        <item>Theatre</item>
        <item>Environmental Science</item>
        <item>Neuroscience</item>
        <item>Medicine</item>
        <item>Writing</item>
        <item>Business</item>
        <item>Government/Politics</item>
        <item>Marketing</item>
        <item>Math</item>
        <item>Research</item>
        <item>Communications</item>
        <item>Science</item>
    </string-array>

    <string-array name="incomes">
        <item>--</item>
        <item>less than $9,700</item>
        <item>$9,700 - $40,000</item>
        <item>$40,000 - $84,000</item>
        <item>$84,000 - $160,000</item>
        <item>$160,000- $204,000</item>
        <item>$204,000 - $510,000</item>
        <item>More than $510,000</item>
        <item>N/A</item>
    </string-array>

    <string name="createAcc">Create New Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="alreadyHaveAcc">Already have an account? Click here to login.</string>
    <string name="Login">Login</string>
    <string name="newHere">New here? Click here to make an account.</string>
    <string name="fillAll">Be sure to fill all fields. Use N/A if not applicable.</string>
    <string name="welcomeText">Connecting innovative companies with motivated students!</string>
    <string name="imAComp">I\'m a Company</string>
    <string name="imAStu">I\'m a student</string>
    <string name="logOutStr">Log Out</string>

</resources>
