<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/comapanyUpload"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".UploadInternship">

    <ScrollView
        android:id="@+id/uploadInternshipsScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/uploadInternshipInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/uploadInternshipPageTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/uploadAnInternshipStr"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nameStr"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/enterInternshipNameStr"
                android:inputType="textPersonName"
                android:autofillHints="" />

            <TextView
                android:id="@+id/startDateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/startStr"
                android:textStyle="bold" />

            <CalendarView
                android:id="@+id/internshipStartDateCalendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/endDateLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/endStr"
                android:textStyle="bold" />

            <CalendarView
                android:id="@+id/internshipEndCalendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/ageLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ageStr"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/ageList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/ages" />

            <TextView
                android:id="@+id/gradeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/orGradeStr"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/gradeList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/grade" />

            <TextView
                android:id="@+id/locationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/locationStr"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/locationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/enterCompanyLocationStr"
                android:inputType="textPersonName"
                android:autofillHints="" />

            <TextView
                android:id="@+id/genderLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/genderStr"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/genderList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/gender" />

            <TextView
                android:id="@+id/raceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/raceStr"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/raceList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/races" />

            <TextView
                android:id="@+id/incomeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/incomeStr"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/incomeList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/incomes" />

            <LinearLayout
                android:id="@+id/militaryLine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/militaryLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/militaryStr"
                    android:textStyle="bold" />

                <Switch
                    android:id="@+id/militarySwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/paidLine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/paidLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/paidStr"
                    android:textStyle="bold" />

                <Switch
                    android:id="@+id/paidSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <TextView
                android:id="@+id/costLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/costStr"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/costText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/enterInternshipCostStr"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/pictureLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/picturesStr"
                android:textStyle="bold" />

            <Button
                android:id="@+id/uploadPictureButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/uploadAPhotoStr" />

            <TextView
                android:id="@+id/deadlineLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/deadlineStr"
                android:textStyle="bold" />

            <CalendarView
                android:id="@+id/applicationDeadlineCalendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/descriptionLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descriptionStr"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/descriptionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enterDescriptionStr"
                android:inputType="textPersonName"
                android:autofillHints="" />

            <TextView
                android:id="@+id/prerequisitesLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prerequisitesStr"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/prerequisitesText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enterPrerequisitesStr"
                android:inputType="textPersonName"
                android:autofillHints="" />

            <TextView
                android:id="@+id/fieldLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fieldStr"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/fieldList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/fields" />

            <TextView
                android:id="@+id/linkToApplicaitonLinkLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/linkToApplicationStr"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/linkToApplicationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enterAnApplicationLinkStr"
                android:inputType="textPersonName"
                android:autofillHints="" />

            <Button
                android:id="@+id/postButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="postInternship"
                android:text="@string/postStr" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>