<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/enterComapnyInfoConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".companyEnterInfoActivity">

    <TextView
        android:id="@+id/enterCompInfoDirections"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/enterTextStr"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/companyNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="13dp"
        android:text="@string/companyNameStr"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/companyBioText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterCompInfoDirections" />

    <AutoCompleteTextView
        android:id="@+id/companyNameEditable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="15dp"
        android:completionHint="@string/enterCompanyNameStr"
        android:hint="@string/enterCompanyNameStr"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/companyNameText"
        app:layout_constraintTop_toBottomOf="@+id/enterCompInfoDirections" />

    <TextView
        android:id="@+id/companyBioText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="13dp"
        android:text="@string/companyBioStr"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/companyNameText" />

    <EditText
        android:id="@+id/companyBioEditable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/enterCompanyBioStr"
        android:inputType="textMultiLine"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/companyBioText" />

    <TextView
        android:id="@+id/companyLocationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="13dp"
        android:text="@string/companyLocationStr"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/companyBioEditable" />

    <EditText
        android:id="@+id/companyLocationEditable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:hint="@string/enterCompanyLocationStr"
        android:inputType="textPostalAddress"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/companyLocationText"
        app:layout_constraintTop_toBottomOf="@+id/companyBioEditable" />

    <TextView
        android:id="@+id/companyLinkText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="13dp"
        android:text="@string/companyWebsiteStr"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/companyLocationEditable" />

    <AutoCompleteTextView
        android:id="@+id/companyLinkEditable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/enterCompanyWebsiteStr"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/companyLinkText"
        app:layout_constraintTop_toBottomOf="@+id/companyLocationEditable" />

    <TextView
        android:id="@+id/companyPFPtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="13dp"
        android:text="@string/selectCompanyPFPText"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/companyLinkEditable" />

    <Button
        android:id="@+id/companySelectImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/selectImg"
        app:layout_constraintStart_toEndOf="@+id/companyPFPtext"
        app:layout_constraintTop_toBottomOf="@+id/companyLinkEditable" />

    <ImageView
        android:id="@+id/companyChoosePFP"
        android:layout_width="145dp"
        android:layout_height="119dp"
        android:src="@drawable/ic_account_circle_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/companySelectImageButton" />

    <Button
        android:id="@+id/companyInfoSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="12dp"
        android:onClick="saveCompanyInfo"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/companyLinkEditable" />

</androidx.constraintlayout.widget.ConstraintLayout>